--- a/StarterCode/static/css/style.css
+++ b/StarterCode/static/css/style.css
@@ -98,8 +98,8 @@ select {
   padding: 20px;
   margin: 0;
   background: black;
-  background-image: url("../images/nasa.jpg");
-  background-attachment: fixed;
+  background-image: url("../images/newbg.jpg");
+  background-attachment: center;
   background-position: bottom center;
   background-size: cover;
 }
@@ -108,6 +108,7 @@ select {
   margin-top: 200px;
   font-size: 0.1rem;
   animation: title 1.2s forwards linear;
+  color: black;
 }
 
 .hero p {
@@ -115,6 +116,7 @@ select {
   opacity: 0;
   animation: subtitle 1.2s forwards linear;
   animation-delay: 1.2s;
+  color: black;
 }
 
 /* input placeholder color changes */
@@ -210,7 +212,7 @@ select {
 
   to {
     font-size: 5.5rem;
-    opacity: 1;
+    opacity: 3;
   }
 }
 
